@@ -18,6 +18,8 @@ PHP                                                                        NEWS
   addresses in the filter extension). (Ilia)
 - Fixed bug #47430 (Errors after writing to nodeValue parameter of an absent 
   previousSibling). (Rob)
+- Fixed bug #46882 (Serialize / Unserialize misbehaviour under OS with different
+  bit numbers). (Matt)
 - Fixed bug #45799 (imagepng() crashes on empty image). (Martin McNickle,
   Takeshi Abe)
 
